@startuml
skinparam class {
	BackgroundColor lightcyan
	ArrowColor teal
	BorderColor slateblue
}
skinparam stereotypeCBackgroundColor YellowGreen

together {
    class Usuario
    class Comentario
    class Vote
}

T_tipo "1" -- "0..*" Usuario : use
Usuario "0..*" -- "1" Vote : use
Usuario "0..*" - "1" Comentario : use
Intention "0..*" --- "1" Usuario : use
Intention "0..*" --- "1" Vote : use
Intention "0..*" --- "1" Comentario : use
Intention "0..*" - "1" T_palabras : use
(Intention, T_palabras) . T_intencion_palabra

class T_tipo {
    <<PK>> user_id : int
    type : varchar(50)
}

class Usuario {
    <<PK>> id : int 
    full_name : varchar(255)
    email : varchar(255)
    department_area : varchar(50)
    password : varchar(30)
    <<FK>> T_tipo_user_id : int 
}

class Vote {
    <<PK>> id : int
    like_dislike : boolean
    <<FK>> intention_id : int
    <<FK>> users_id : int
}

class Comentario {
    <<PK>> id : int
    content : varchar(500)
    <<FK>> user_id : int
    <<FK>> intention_id : int
}

class Intention {
    <<PK>> id : int
    <<FK>> user_id : int
    state : varchar(25)
    content : varchar(1000)
    date_of_creation : date
    title : varchar(50)
    ----
}

class T_palabras {
    <<PK>> id : int
    tag : varchar(50)
}

class T_intencion_palabra {
    <<PK>> <<FK>> Intention_id : int
    <<PK>> <<FK>> T_palabras_id : int
}


hide circle
@enduml